# Astroid

./: CMakeLists.txt  README.md
Classes/controller/: AppDelegate.cpp
Classes/dao/: ISql.h
Classes/dao/impl/: FileDataSqlImpl.h
Classes/entity/: Astroid.h  Beatmap.h  FileData.h
Classes/entity/impl/: AstroidInfo.h  AstroidObject.h  BeatmapInfo.h  BreakPeriod.h  OsuHitObjects.h  Song.h  TimingControlPoint.h
Classes/enums/: AstroidObjectEnums.h  OsuObjectEnums.h
Classes/service/: FormatFileData.h  GetListData.h  InitBeatmap.h  OsuToAst.h  RandomSongAndBG.h
Classes/util/: OSUFileReadUtil.h  RWCache.h  TraverseFileUtil.h  XMLConfigUtil.h
Classes/view/: GameScene.cpp  GameScene.h  MapListScene.cpp  MapListScene.h  SceneManager.cpp  SceneManager.h  ScoreScene.cpp  ScoreScene.h  StartMenuScene.cpp  StartMenuScene.h
Classes/view/layer/: GameLayer.cpp  GameLayer.h  ListViewLayer.cpp  ListViewLayer.h  MapListLayer.cpp  MapListLayer.h  OptionLayer.cpp  OptionLayer.h  ScoreLayer.cpp  ScoreLayer.h  StartMenuLayer.cpp  StartMenuLayer.h  StopLayer.cpp  StopLayer.h
Resources/part/: icon.psd
Resources/scene/gamelayer/: bar.psd  di.psd  star.psd
Resources/scene/listviewlayer/: listitem.psd
Resources/scene/optionlayer/: label.psd  select.psd  sliderbutton.psd
Resources/scene/scorelayer/: rank.psd
Resources/scene/startmenu/: button.psd  line.psd  slider.psd
Resources/songs/44305 DJ Okawari - Canon (Short Ver)/: DJ Okawari - Canon (Short Ver.) (backstep) [Peaceful].osu  DJ Okawari - Canon (Short Ver.) (backstep) [Quiet].osu
Resources/sprites/goldenberry/: skeleton.atlas
Resources/sprites/ririsu/: ririsu.atlas  ririsu.json
cocos2d/cocos/editor-support/spine/: CMakeLists.txt
lib/sqlite3/: sqlite-android-3380100.aar  sqlite3.exp  sqlite3.lib
proj.android/: build.gradle  gradle.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/assets/scene/listviewlayer/: massage.psd
proj.android/app/assets/scene/optionlayer/: backbutton.psd
proj.android/app/assets/scene/startmenu/: optionlayer.psd  player.psd  playerbutton.psd
proj.android/app/assets/scene/stoplayer/: continue.psd
proj.android/app/assets/songs/44305 DJ Okawari - Canon (Short Ver)/: DJ Okawari - Canon (Short Ver.) (backstep) [Restful].osu  DJ Okawari - Canon (Short Ver.) (backstep) [Spinboxer].osu  DJ Okawari - Canon (Short Ver.) (backstep) [ToAst].osu  DJ Okawari - Canon (Short Ver.) (backstep) [Tranquil].osu
proj.android/app/assets/sprites/goldenberry/: skeleton.json
proj.android/app/jni/hellocpp/: main.cpp
proj.android/app/src/org/cocos2dx/Astroid/: AppActivity.java
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/mac/: Info.plist  main.cpp
proj.linux/: main.cpp
proj.win32/: main.cpp
